--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "cloudinary": "^1.41.0",
+    "react-dropzone": "^14.2.3"
   }
 }
