--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,6 @@
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "cloudinary": "^1.41.0",
-    "react-dropzone": "^14.2.3"
+    "cloudinary": "^1.41.0"
   }
 }
