--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "cloudinary": "^1.41.0"
+    "cloudinary": "^1.41.0",
+    "react": "^18.2.0"
   }
 }
